# lambda_docker

./: .gitignore  README.md  lambda_docker.env  lambda_function.py  lambda_param.json  pyproject.toml
commands/: lambda_buiild.sh  lambda_run.sh
