[tool.poetry]
name = "my_lambda"
version = "0.1.0"
description = ""
authors = ["manjiii"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"


[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
autopep8 = "^1.5.3"
pylint = "^2.5.3"
boto3 = "^1.15.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

